modify log handling